- Improved decision-making by a huge amount. - Added terminator loadout - Other improvements

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,3 +9,5 @@ commands:
     usage: /terminator <playername> <number of bots>
   clearterminators:
     usage: /clearterminators
+  terminatorloadout:
+    usage: /terminatorloadout
