--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.swipez</groupId>
     <artifactId>TerminatorNPC</artifactId>
-    <version>1.3-QuestalReborn</version>
+    <version>1.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>TerminatorNPC</name>
