--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: TerminatorNPC
 version: ${project.version}
 main: me.swipez.terminatornpc.TerminatorNPC
 api-version: 1.18
-authors: [ notnotnotswipez, Daxanius ]
+authors: [ notnotnotswipez ]
 depend: [Citizens]
 commands:
   terminator:
